Add README and style.

--- a/app-sample/index.html
+++ b/app-sample/index.html
@@ -25,6 +25,7 @@
         width: 50%;
         max-width: 600px;
         min-width: 300px;
+        background-color: #a30124;
       }
 
       #deployment.blue {
